[gd_scene load_steps=6 format=2]

[ext_resource path="res://TextEdit.gd" type="Script" id=1]
[ext_resource path="res://dogica.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/reload.png" type="Texture" id=3]
[ext_resource path="res://GroundPlatform.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="GroundPlatform" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 90, 81 )
scale = Vector2( 2.9375, 2.79063 )
texture = ExtResource( 4 )

[node name="CodeEditor" type="TextEdit" parent="."]
unique_name_in_owner = true
anchor_top = 0.595
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -3.05176e-05
custom_colors/member_variable_color = Color( 1, 1, 1, 1 )
custom_colors/function_color = Color( 0.192157, 0.615686, 0.956863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/word_highlighted_color = Color( 0.117647, 0.196078, 0.741176, 1 )
custom_constants/line_spacing = 10
custom_fonts/font = SubResource( 4 )
text = "#HELLO
#HOLA"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
smooth_scrolling = true
wrap_enabled = true
script = ExtResource( 1 )

[node name="RunButton" type="Button" parent="CodeEditor"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0
disabled = true
text = "RUN"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 50, 43 )
scale = Vector2( 0.253333, 0.253333 )
normal = ExtResource( 3 )
action = "restart"

[connection signal="cursor_changed" from="CodeEditor" to="CodeEditor" method="_on_TextEdit_cursor_changed"]
[connection signal="text_changed" from="CodeEditor" to="CodeEditor" method="_on_TextEdit_text_changed"]
[connection signal="button_down" from="CodeEditor/RunButton" to="CodeEditor" method="_on_RunButton_button_down"]
